src/objects/CBL2_Farm__c.object
<CustomObject>
    <fields>
        <fullName>percWithoutShade__c</fullName>
        <label>percWithoutShade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentageShade__c</fullName>
        <label>percentageShade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>permWorkersMinimumMonthWage__c</fullName>
        <label>permWorkersMinimumMonthWage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>physicalOralSexualAbuse__c</fullName>
        <label>physicalOralSexualAbuse</label>
        <picklist>
            <picklistValues>
                <fullName>De acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medianamente de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En desacuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>plagueControlAgroChemicals__c</fullName>
        <label>plagueControlAgroChemicals</label>
        <picklist>
            <picklistValues>
                <fullName>No usa ningún producto químico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thiodan 35% (Endosulfan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorsban 48 EC (Clorpirifós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temik 15G (Aldicarb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furadan 10G (Carbofuran)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mocap 15G (Ethoprop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nemacur 10G (Fenamifos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter 10 G (Terbufós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decis 2.5 EC (Deltametrina)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malathion 50 EC (MALATION O,O-Dimetil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>plague_DiseaseControlEquipmt__c</fullName>
        <label>plague&amp;DiseaseControlEquipmt</label>
        <picklist>
            <picklistValues>
                <fullName>Equipo/traje de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bomba de mochila/Espalda motorizada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bomba de mochila/Espalda manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juego de diferentes boqillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>plantedNewAreas__c</fullName>
        <label>plantedNewAreas</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>prodLastHarvestUnits__c</fullName>
        <label>prodLastHarvestUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Arrobas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogramos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quintales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>productionContaminationRisk__c</fullName>
        <label>productionContaminationRisk</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>productionLastHarvest__c</fullName>
        <label>productionLastHarvest</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>productsSoilTreatment__c</fullName>
        <label>productsSoilTreatment</label>
        <picklist>
            <picklistValues>
                <fullName>Sulfato de calcio CaCo-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cal Dolomítica CaCo-MgCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnesita MgCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrical CaCo-MgCo-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>promotesFloraAndFaunaPreservation__c</fullName>
        <label>promotesFloraAndFaunaPreservation</label>
        <picklist>
            <picklistValues>
                <fullName>Si se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneAreaLastYearUnits__c</fullName>
        <label>pruneAreaLastYearUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneAreaLastyear__c</fullName>
        <label>pruneAreaLastyear</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pruneLastYear__c</fullName>
        <label>pruneLastYear</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pruneType__c</fullName>
        <label>pruneType</label>
        <picklist>
            <picklistValues>
                <fullName>Poda selectiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepa por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepa por surco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>registersPlague_DiseaseCtrlSupplies__c</fullName>
        <label>registersPlague&amp;DiseaseCtrlSupplies</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>renewedCoffeeLastYear__c</fullName>
        <label>renewedCoffeeLastYear</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>safeStorageForSupplies__c</fullName>
        <label>safeStorageForSupplies</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>shadowLevelsNumber__c</fullName>
        <label>shadowLevelsNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signatureURL__c</fullName>
        <label>signatureURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>soilConservAreaUnits__c</fullName>
        <label>soilConservAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>soilConservationArea__c</fullName>
        <label>soilConservationArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soilConservationPractices__c</fullName>
        <label>soilConservationPractices</label>
        <picklist>
            <picklistValues>
                <fullName>Curvas a nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas individuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas de banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras vivas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras físicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acequias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchon de materia orgánica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realiza ninguna de esas prácticas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>tempWorkersMinimumDailyWage__c</fullName>
        <label>tempWorkersMinimumDailyWage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalFarmAreaUnits__c</fullName>
        <label>totalFarmAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25 x 25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáeras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>totalFarmArea__c</fullName>
        <label>totalFarmArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>turnedForestInCropArea__c</fullName>
        <label>turnedForestInCropArea</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>typeOfCoffeeLastHarvest__c</fullName>
        <label>typeOfCoffeeLastHarvest</label>
        <picklist>
            <picklistValues>
                <fullName>Cereza/uva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino oreado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino seco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>underAgeWorkConditions__c</fullName>
        <label>underAgeWorkConditions</label>
        <picklist>
            <picklistValues>
                <fullName>Van a la escuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No van a la escuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sobrepasan las horas de trabajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ponen en riesgo salud y crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ponen en riego salud y crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores se cumplen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>underagePregnantProtected__c</fullName>
        <label>underagePregnantProtected</label>
        <picklist>
            <picklistValues>
                <fullName>Sí se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>unitForestArea__c</fullName>
        <label>unitForestArea</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>useOfProtApplicationDangSubstances__c</fullName>
        <label>useOfProtApplicationDangSubstances</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, siempre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, pero si hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>usesLeguminousNitrAbsort__c</fullName>
        <label>usesLeguminousNitrAbsort</label>
        <picklist>
            <picklistValues>
                <fullName>Si utiliza especies leguminosas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No utiliza especies leguminosas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wasteDisposedSafeWay__c</fullName>
        <label>wasteDisposedSafeWay</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>waterBodiesBufferZones__c</fullName>
        <label>waterBodiesBufferZones</label>
        <picklist>
            <picklistValues>
                <fullName>100% de cuerpos de agua permanentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; al 50% de cuerpos de agua permanentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% de cuerpos de agua intermitentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; al 50% de cuerpos de agua intemitentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No existen suficientes z. de amortig.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>weedsControlHerbicides__c</fullName>
        <label>weedsControlHerbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Alaclor (lazo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentaton (Basagram)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendimentalina (Prowl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxifluorfen (Goal o Galigan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluazitop (Fusilade)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holoxitop (Galant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diuron (Karmex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metsulfuron metil (Matancha)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acetoclor (Harmess)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glifosato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>weedsControlMethods__c</fullName>
        <label>weedsControlMethods</label>
        <picklist>
            <picklistValues>
                <fullName>Control físico/mecánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchón material orgánico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancias de siembra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de Sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control químico/herbicidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>wetMillAlreadyRegistered__c</fullName>
        <label>wetMillAlreadyRegistered</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetMillCode__c</fullName>
        <label>wetMillCode</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wetMillCountry__c</fullName>
        <label>wetMillCountry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillDepartment__c</fullName>
        <label>wetMillDepartment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillDistrict__c</fullName>
        <label>wetMillDistrict</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillLocation__c</fullName>
        <label>wetMillLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Medellin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetMillMunicipality__c</fullName>
        <label>wetMillMunicipality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetmill_baseUsedForStorage__c</fullName>
        <label>wetmill_baseUsedForStorage</label>
        <picklist>
            <picklistValues>
                <fullName>Sobre madera o estibas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directamente sobre el piso</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_canSeparateByLot__c</fullName>
        <label>wetmill_canSeparateByLot</label>
        <picklist>
            <picklistValues>
                <fullName>Puede separar lotes/calidades/certif.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No puede separar lotes/calidades/certif.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_checksTransport__c</fullName>
        <label>wetmill_checksTransport</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_classifiesInputCoffeeQuality__c</fullName>
        <label>wetmill_classifiesInputCoffeeQuality</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_cleanWaterRestingTime__c</fullName>
        <label>wetmill_cleanWaterRestingTime</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wetmill_cleanWaterResting__c</fullName>
        <label>wetmill_cleanWaterResting</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_cleanWaterUsed__c</fullName>
        <label>wetmill_cleanWaterUsed</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_code_guat__c</fullName>
        <label>wetmill_code_guat</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_coffeWashMeans__c</fullName>
        <label>wetmill_coffeWashMeans</label>
        <picklist>
            <picklistValues>
                <fullName>Canal de correteo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilas de lavado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toneles metálicos o plásticos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desmucilaginadora</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>wetmill_coffeeHarvestedMore6Hours__c</fullName>
        <label>wetmill_coffeeHarvestedMore6Hours</label>
        <picklist>
            <picklistValues>
                <fullName>No, nunca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si, con mucha frecuencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se tiene ese control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_contaminationRisk__c</fullName>
        <label>wetmill_contaminationRisk</label>
        <picklist>
            <picklistValues>
                <fullName>No hay riesgos de contaminación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si hay riesgos de contaminación</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_documentationAndLabeling__c</fullName>
        <label>wetmill_documentationAndLabeling</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_drainageInfraStatus__c</fullName>
        <label>wetmill_drainageInfraStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Buen drenaje sin charcos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal drenaje con charcos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_drainageStatus__c</fullName>
        <label>wetmill_drainageStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Buen drenaje sin charcos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal drenaje con charcos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_dryIsolatedContamination__c</fullName>
        <label>wetmill_dryIsolatedContamination</label>
        <picklist>
            <picklistValues>
                <fullName>Humo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drenajes/aguas negras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caminos/carreteras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aplicaciones de agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>wetmill_dryMeans__c</fullName>
        <label>wetmill_dryMeans</label>
        <picklist>
            <picklistValues>
                <fullName>Secadora mecánica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patio de cemento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secador solar/marquesina/invernadero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parihuela/cama africana o de madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lámina de zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plástico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>wetmill_dryOver50Grades__c</fullName>
        <label>wetmill_dryOver50Grades</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_dryingStatus__c</fullName>
        <label>wetmill_dryingStatus</label>
        <picklist>
            <picklistValues>
                <fullName>El café se seca parejo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El café seca disparejo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_enoughWater__c</fullName>
        <label>wetmill_enoughWater</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, hay suficiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay suficiente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_fermTanksStatusBeforeProcess__c</fullName>
        <label>wetmill_fermTanksStatusBeforeProcess</label>
        <picklist>
            <picklistValues>
                <fullName>Limpios antes de cada proceso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sucios con cierta frecuencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_fermentationProcess__c</fullName>
        <label>wetmill_fermentationProcess</label>
        <picklist>
            <picklistValues>
                <fullName>En pila de concreto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En acero inoxidable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En cajón de madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En recipientes de plástico/metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Sacos o bolsas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con Desmucilaginadora</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetmill_fermentationTanksStatus__c</fullName>
        <label>wetmill_fermentationTanksStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Sin ranuras o grietas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con ranuras o grietas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>